css/botan.css
/* ... */
.search[data-v-4fbac4e1]:hover::after {
    content: '';
    color: transparent;
    background-image: url(https://files.weebsquad.moe/OZPYVOSr.png);
    background-color: transparent;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 10px 20px;
    filter: brightness(1.7);
}

/* svg elements */
.user .chevron[data-v-4fbac4e1],
.markdown-editor>div {
    font-weight: 900;
    color: #000;
    stroke: #fff;
    stroke-width: 30px;
}

.markdown-editor>[title="Image"],
.markdown-editor>[title="Youtube Video"],
.markdown-editor>[title="WebM Video"] {
    color: rgb(99, 0, 0);
}

/* Outlines */
.section-header[data-v-514856af],
.section-header[data-v-aedb6876],
.section-header[data-v-45543a61],
.medialist.table .section-name,
.name[data-v-5445dac8],
.section-header[data-v-93c5960c],
.section-header[data-v-09492909],
.heading h3[data-v-72dc5b51],
.title[data-v-e74f4a6a],
h2[data-v-82d0a8cc],
.highlight .value[data-v-72dc5b51],
.title[data-v-26dc9635],
.el-message-box .el-message-box__title {
    font-weight: 900;
    color: #000;
    text-shadow: rgb(255, 255, 255) 3px 0px 0px, rgb(255, 255, 255) 2.83487px 0.981584px 0px, rgb(255, 255, 255) 2.35766px 1.85511px 0px, rgb(255, 255, 255) 1.62091px 2.52441px 0px, rgb(255, 255, 255) 0.705713px 2.91581px 0px, rgb(255, 255, 255) -0.287171px 2.98622px 0px, rgb(255, 255, 255) -1.24844px 2.72789px 0px, rgb(255, 255, 255) -2.07227px 2.16926px 0px, rgb(255, 255, 255) -2.66798px 1.37182px 0px, rgb(255, 255, 255) -2.96998px 0.42336px 0px, rgb(255, 255, 255) -2.94502px -0.571704px 0px, rgb(255, 255, 255) -2.59586px -1.50383px 0px, rgb(255, 255, 255) -1.96093px -2.27041px 0px, rgb(255, 255, 255) -1.11013px -2.78704px 0px, rgb(255, 255, 255) -0.137119px -2.99686px 0px, rgb(255, 255, 255) 0.850987px -2.87677px 0px, rgb(255, 255, 255) 1.74541px -2.43999px 0px, rgb(255, 255, 255) 2.44769px -1.73459px 0px, rgb(255, 255, 255) 2.88051px -0.838247px 0px;
}

/* reset filter stuff */
.section-header[data-v-09492909] .el-dropdown {
    text-shadow: none;
    color: rgb(var(--color-text-lighter));
}

/* milestone stats */
.stat .value[data-v-815ccddc],
.hohMilestones .stat .value {
    font-weight: 900;
    color: #000;
    text-shadow: rgb(255, 255, 255) 2px 0px 0px, rgb(255, 255, 255) 1.75517px 0.958851px 0px, rgb(255, 255, 255) 1.0806px 1.68294px 0px, rgb(255, 255, 255) 0.141474px 1.99499px 0px, rgb(255, 255, 255) -0.832294px 1.81859px 0px, rgb(255, 255, 255) -1.60229px 1.19694px 0px, rgb(255, 255, 255) -1.97998px 0.28224px 0px, rgb(255, 255, 255) -1.87291px -0.701566px 0px, rgb(255, 255, 255) -1.30729px -1.5136px 0px, rgb(255, 255, 255) -0.421592px -1.95506px 0px, rgb(255, 255, 255) 0.567324px -1.91785px 0px, rgb(255, 255, 255) 1.41734px -1.41108px 0px, rgb(255, 255, 255) 1.92034px -0.558831px 0px;
}

/* milestone bar */
.user-page-unscoped.orange .progress .bar,
.progress .bar[data-v-815ccddc] {
    background: linear-gradient(270deg, #ffffff, rgb(var(--color-blue)));
    border-radius: 0 20px 500px 4px;
}

/* FONTS */
/* - Augie */
.stat .value[data-v-815ccddc],
.milestones .milestone[data-v-815ccddc],
.dropdown[data-v-38edf8f8],
.dropdown[data-v-0bb70ffa],
.name[data-v-aedb6876],
.el-dropdown-menu--small .el-dropdown-menu__item,
.wrap[data-v-568e7548],
.overview[data-v-2cf72664] .content-wrap,
.wrap[data-v-568e7548],
.browse-wrap[data-v-4fbac4e1] .dropdown,
.user-wrap[data-v-4fbac4e1] .dropdown,
.site-theme-dark .quick-search.el-select .el-input.el-input__inner,
.site-theme-dark .quick-search .el-select .el-input.is-focus .el-input__inner,
.site-theme-dark .el-select-dropdown,
.site-theme-dark .el-dropdown-menu,
.site-theme-dark .el-dropdown-menu__item--divided::before,
.input-shadow .el-input__inner,
.reply[data-v-0bf5aadf],
.el-input,
.el-textarea,
.markdown-editor,
.name[data-v-aedb6876],
.medialist.table .list-section,
.filters-wrap[data-v-128c06f0],
.el-input__inner,
.filter-wrap[data-v-1e00b9da],
.footer[data-v-82d0a8cc],
.section-header[data-v-514856af],
.section-header[data-v-aedb6876],
.section-header[data-v-45543a61],
.medialist.table .section-name,
.name[data-v-5445dac8],
.section-header[data-v-93c5960c],
.section-header[data-v-09492909],
.heading h3[data-v-72dc5b51],
.title[data-v-e74f4a6a],
h2[data-v-82d0a8cc],
.highlight .label[data-v-72dc5b51],
.bar-chart-wrap[data-v-46edc0ca],
.options[data-v-05bb5e72],
.title[data-v-26dc9635],
[data-v-72dc5b51] .horizontal-scroller,
.label-wrap[data-v-26dc9635],
.filters[data-v-310d8b7e],
.title[data-v-59e94718],
.filters[data-v-3ed82f3f],
.details[data-v-0f6464f0],
#regularAnimeTable,
#regularMangaTable,
#animeStaff,
#animeStudios,
#mangaStaff,
.tooltip.animate-position[data-v-9401173e],
.el-message-box {
    font-family: 'augie';
}

/* Manga Temple */
.elements {
    font-family: 'Manga Temple';
}

/* - Wild Words */
.stat .label[data-v-815ccddc],
.markdown h1,
.markdown h2,
.markdown h3,
.markdown h4,
.markdown h5,
.button.cancel,
.button.save,
.list-head.row,
.title[data-v-0f6464f0],
.highlight .value[data-v-72dc5b51],
.status[data-v-59e94718],
.hohTable .header.row,
.el-message-box__title,
.el-message-box .el-button {
    font-family: 'Wild Words';
}

/* hohTable titles */
.hohTable .header.row {
    font-size: 1.45rem;
}
/* ... */

